lib/html-template-macro/tests/compile_fail/mixed-generics.stderr
error: Cannot use impl traits *and* explicit generics at the same time
 --> tests/compile_fail/mixed-generics.rs:9:14
  |
9 |         attribute: impl HtmlAttributeValue + HtmlTemplate,
  |                    ^^^^

error: Cannot use impl traits *and* explicit generics at the same time
  --> tests/compile_fail/mixed-generics.rs:10:13
   |
10 |         children: impl HtmlTemplate
   |                   ^^^^

error: Cannot use impl traits *and* explicit generics in one component.
 --> tests/compile_fail/mixed-generics.rs:7:33
  |
7 |     pub(crate) struct TestComponent<T>(
  |                                    ^

error[E0433]: failed to resolve: use of undeclared crate or module `fmt`
  --> tests/compile_fail/mixed-generics.rs:19:14
   |
19 | fn main() -> fmt::Result {
   |              ^^^ use of undeclared crate or module `fmt`
